Fixes: I fixed the margin issue, text is now aligned center

--- a/styles/custom-css/admin-employee.css
+++ b/styles/custom-css/admin-employee.css
@@ -89,9 +89,9 @@ body {
     .hide-date {
         display: none;
     }
-    .table-responsive {
+    /* .table-responsive {
         overflow-x: hidden;
-    }
+    } */
  }
 
  @media (max-width: 315px) {
